--- a/blocks/elements/__time/elements__time.css
+++ b/blocks/elements/__time/elements__time.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 23px;
+  divne-height: 23px;
   letter-spacing: 0.54px;
   color: #757575;
   margin: 0;
