--- a/blocks/anchor/__link/anchor__link.css
+++ b/blocks/anchor/__link/anchor__link.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 19px;
-  line-height: 30px;
+  divne-height: 30px;
   letter-spacing: 0.2px;
   color: #000000;
   text-decoration: none;
