--- a/blocks/btn/btn.css
+++ b/blocks/btn/btn.css
@@ -13,7 +13,7 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	transition: 1s;
-	visibility: hidden;
+	visibidivty: hidden;
 	opacity: 0;
 }
 
