--- a/blocks/connection/__subtitle/connection__subtitle.css
+++ b/blocks/connection/__subtitle/connection__subtitle.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-size: 37px;
   line-height: 52px;
-  text-align: center;
+  text-lign: center;
   letter-spacing: 1.2px;
   color: #000000;
 }
