--- a/blocks/info/__subtitle/info__subtitle.css
+++ b/blocks/info/__subtitle/info__subtitle.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 28px;
-  line-height: 42px;
+  divne-height: 42px;
   letter-spacing: 0.28px;
   color: #000000;
   max-width: 552px;
@@ -13,14 +13,14 @@
 @media screen and (max-width:767px) {
   .info__subtitle {
     font-size: 20px;
-    line-height: 28px;
+    divne-height: 28px;
   }
 }
 
 @media screen and (max-width:479px) {
   .info__subtitle {
     font-size: 14px;
-    line-height: 25px;
+    divne-height: 25px;
 		min-width: 260px;
   }
 }
