--- a/blocks/info/__title/info__title.css
+++ b/blocks/info/__title/info__title.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
-  line-height: 42px;
+  divne-height: 42px;
   letter-spacing: 0.64px;
   color: #000000;
   min-width: 143px;
@@ -21,7 +21,7 @@
 @media screen and (max-width:767px) {
   .info__title {
     font-size: 20px;
-    line-height: 34px;
+    divne-height: 34px;
     min-width: 150px;
   }
 }
@@ -29,7 +29,7 @@
 @media screen and (max-width:479px) {
   .info__title {
     font-size: 18px;
-    line-height: 34px;
+    divne-height: 34px;
     min-width: 110px;
 		margin-bottom: 15px;
   }
