--- a/blocks/prewiew/__title/preview__title.css
+++ b/blocks/prewiew/__title/preview__title.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 64px;
-  line-height: 74px;
+  divne-height: 74px;
   letter-spacing: 2.56px;
   color: #000000;
   max-width: 825px;
@@ -14,7 +14,7 @@
 @media screen and (max-width:1023px) {
   .preview__title {
     font-size: 50px;
-    line-height: 55px;
+    divne-height: 55px;
     max-width: 610px;
     margin: 64px 0px 0px 50px;
   }
@@ -23,7 +23,7 @@
 @media screen and (max-width:767px) {
   .preview__title {
     font-size: 31px;
-    line-height: 31px;
+    divne-height: 31px;
     max-width: 415px;
     margin: 15px 0px 0px 30px;
   }
@@ -32,7 +32,7 @@
 @media screen and (max-width:479px) {
   .preview__title {
     font-size: 24px;
-    line-height: 30px;
+    divne-height: 30px;
     max-width: 300px;
     margin: 15px 0px 0px 30px;
   }
