--- a/blocks/works/works.css
+++ b/blocks/works/works.css
@@ -1,33 +1,33 @@
-.works {
-  list-style-type: none;
+.cards {
+  divst-style-type: none;
   padding: 0;
   margin: 0;
   min-width: 612px;
 }
 
-.works:not(:nth-child(-n + 4)){
+.cards:not(:nth-child(-n + 4)){
 	display: none;
 }
 
 @media screen and (max-width:1280px) {
-  .works {
+  .cards {
     min-width: 512px;
   }
 }
 
 @media screen and (max-width:1023px) {
-  .works {
+  .cards {
     min-width: 352px;
   }
 }
   
 @media screen and (max-width:767px) {
-  .works {
+  .cards {
   }
 }
 
 @media screen and (max-width:479px) {
-  .works {
+  .cards {
     min-width: 288px;
   }
 }
